# bigiqbot

./: README.md  arguments.py  bot.py  currency.py  donaldtrump.py  gamer.py  help.py  keep_alive.py  main.py  nextround.py  panik.py  players.py  pyproject.toml  roulette.py  roulettegame.py  weather.py  webserver.py
commands/: annoy.py  arguments.py  coinflip.py  currency.py  currencyget.py  dailyget.py  donaldtrump.py  endgame.py  fibcontroller.py  fibstart.py  gamer.py  help.py  invite.py  join.py  nextround.py  ping.py  players.py  prefix.py  roulette.py  roulettegame.py  sadness.py  start.py  suggest.py  weather.py
